syntax = "proto3";

package cosmos_modules.incubator.group.v1_alpha;

option go_package = "github.com/cosmos/modules/incubator/group";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "third_party/proto/cosmos-proto/cosmos.proto";


message Msg {
    oneof sum {
        MsgCreateGroup create_group = 1; // returns uint64 GroupID
        MsgUpdateGroupMembers update_group_members = 2;
        MsgUpdateGroupAdmin update_group_admin = 3;
        MsgUpdateGroupComment update_group_comment = 4;
        MsgCreateGroupAccountStd create_group_account = 5; // returns sdk.AccAddress
        MsgUpdateGroupAccountAdmin update_group_account_admin = 6;
        MsgUpdateGroupAccountDecisionPolicyStd update_group_account_decision_policy = 7;
        MsgUpdateGroupAccountComment update_group_account_comment = 8;
        MsgVote vote = 9;
        MsgExec exec = 10;
    }
}

//
// Groups
//

message MsgCreateGroup {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    repeated Member members = 2 [(gogoproto.nullable) = false];
    string comment = 3;
}

message MsgUpdateGroupMembers {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    uint64 group = 2 [(gogoproto.casttype) = "GroupID"];
    repeated Member member_updates = 3 [(gogoproto.nullable) = false]; // set power to 0 to remove
}

message MsgUpdateGroupAdmin {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    uint64 group = 2 [(gogoproto.casttype) = "GroupID"];
    bytes new_admin = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message MsgUpdateGroupComment {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    uint64 group = 2 [(gogoproto.casttype) = "GroupID"];
    string comment = 3;
}

message Member {
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string power = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    string comment = 3;
}

//
// Group Accounts
//

message MsgCreateGroupAccountBase {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    uint64 group = 2 [(gogoproto.casttype) = "GroupID"];
    string comment = 3;
}

// MsgCreateGroupAccountStd creates a group account using one of the members of StdDecisionPolicy. Apps can
// create their own create account msg that supports custom DecisionPolicy's using MsgCreateGroupAccountBase as
// starting point
message MsgCreateGroupAccountStd {
    option (gogoproto.goproto_getters) = false;
    MsgCreateGroupAccountBase base = 1 [(gogoproto.nullable) = false];
    StdDecisionPolicy decision_policy = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateGroupAccountAdmin {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    bytes group_account = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    bytes new_admin = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message MsgUpdateGroupAccountBase {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    uint64 group = 2 [(gogoproto.casttype) = "GroupID"];
}

// MsgCreateGroupAccountStd allows a group account decision policy to be updated to a member of StdDecisionPolicy, can
// be overridden to support custom DecisionPolicy's by apps.
message MsgUpdateGroupAccountDecisionPolicyStd {
    MsgUpdateGroupAccountBase base = 1 [(gogoproto.nullable) = false];
    StdDecisionPolicy decision_policy = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateGroupAccountComment {
    bytes admin = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    bytes group_account = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string comment = 3;
}

// StdDecisionPolicy is a set of standard decision policies that can be used by zones that do not implement custom
// DecisionPolicy types. Apps can start with StdDecisionPolicy and later add custom DecisionPolicy's by creating
// a MyAppDecisionPolicy and registering that with the group module codec. In order to be backwards compatible,
// MyAppDecisionPolicy should include all the existing StdDecisionPolicy types with the same field number and then
// add custom DecisionPolicy types afterwards.
message StdDecisionPolicy {
    option (cosmos_proto.interface_type) = "*DecisionPolicy";
    oneof sum {
        ThresholdDecisionPolicy threshold = 1;
    }
}
message ThresholdDecisionPolicy {
    // threshold is a fix weight value that must be met or exceeded for a proposal to succeed.
    string threshold = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    // timout is the duration from submission of a proposal to the end of voting period
    // Within this times votes and exec messages can be submitted.
    google.protobuf.Duration timout = 2 [(gogoproto.nullable) = false];
}

//
// Proposals and Voting
//

// MsgProposeBase is the base propose msg that app should use to implement a MsgPropose type based
// on their app Msg type.
//
// Ex:
// message MsgPropose {
//   MsgProposeBase base = 1;
//   repeated MyAppMsg msgs = 2;
// }
message MsgProposeBase {
    bytes group_account = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    // Proposers signatures will be counted as yes votes
    repeated bytes proposers = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string comment = 3;
}

enum Choice {
    UNKNOWN = 0;
    NO = 1;
    YES = 2;
    ABSTAIN = 3;
    VETO = 4;
}

message MsgVote {
    uint64 proposal = 1 [(gogoproto.casttype) = "ProposalID"];
    repeated bytes voters = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    Choice choice = 3;
    string comment = 4;
}

message MsgExec {
    uint64 proposal = 1 [(gogoproto.casttype) = "ProposalID"];
    bytes signer = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

//
// State
//

message GroupMetadata {
    uint64 group = 1 [(gogoproto.casttype) = "GroupID"];
    bytes admin = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string comment = 3;
    // version is used to track changes to a group's membership structure that
    // would break existing proposals. Whenever any members power is changed,
    // or any member is added or removed this version is incremented and will
    // cause proposals based on older versions of this group to fail
    uint64 version = 4;
    string totalWeight = 5 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message GroupMember {
    uint64 group = 1 [(gogoproto.casttype) = "GroupID"];
    // todo: @aaronc field has different name in `Member.address`. Can we unify this?
    bytes member = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    // todo: @aaronc it is `Member.power`. Can we unify this?
    string weight = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    string comment = 4; // TODO: @aaronc was comment missing by intention?
}

// GroupAccountMetadataBase is the base message that app's should use to specify group account metadata based on the
// DecisionPolicy's they support.
//
// Ex:
// message MyAppGroupAccountMetadata {
//     GroupAccountMetadataBase base = 1;
//     MyAppDecisionPolicy decision_policy = 2;
// }
//
// App's which do not implement custom DecisionPolicy's can use StdGroupAccountMetadata.
message GroupAccountMetadataBase {
    bytes group_account = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    uint64 group = 2 [(gogoproto.casttype) = "GroupID"];
    bytes admin = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string comment = 4;
    // version is used to track changes to a group's GroupAccountMetadataBase structure that
    // would create a different result on a running proposal.
    uint64 version = 5;
}

// StdGroupAccountMetadata is a default group account metadata type to be used by apps which do not implement custom
// DecisionPolicy's.
message StdGroupAccountMetadata {
    GroupAccountMetadataBase base = 1 [(gogoproto.nullable) = false];
    StdDecisionPolicy decision_policy = 2 [(gogoproto.nullable) = false];
}

// ProposalBase is the base proposal type that app should use to implement a Proposal type based
// on their app Msg type.
//
// Ex:
// message MyAppProposal {
//   ProposalBase base = 1;
//   repeated MyAppMsg msgs = 2;
// }
message ProposalBase {
    bytes group_account = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    string comment = 2;
    repeated bytes proposers = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    google.protobuf.Timestamp submitted_at = 4 [(gogoproto.nullable) = false];
    // GroupVersion tracks the version of the group that this proposal corresponds to. When group membership is changed
    // existing proposals for prior group versions will become invalid.
    uint64 group_version = 5;
    // GroupAccountVersion tracks the version of the group account that this proposal corresponds to. When a decision policy is changed
    // an existing proposals for prior policy versions will become invalid.
    uint64 group_account_version = 6;

    enum Status {
        option (gogoproto.goproto_enum_prefix) = false;
        // An empty value is invalid and not allowed
        PROPOSAL_STATUS_INVALID = 0 [(gogoproto.enumvalue_customname) = "ProposalStatusInvalid"];
        // Initial status of a proposal when persisted.
        PROPOSAL_STATUS_SUBMITTED = 1 [(gogoproto.enumvalue_customname) = "ProposalStatusSubmitted"];
        // Final status of a proposal when the final tally was executed
        PROPOSAL_STATUS_CLOSED = 2 [(gogoproto.enumvalue_customname) = "ProposalStatusClosed"];
        // Final status of a proposal when the group was modified before the final tally.
        PROPOSAL_STATUS_ABORTED = 3 [(gogoproto.enumvalue_customname) = "ProposalStatusAborted"];

        // TODO: do we want to support a withdrawn operation?
        // A proposal can be deleted before the voting start time by the owner. When this happens the final status
        // is Withdrawn.
        //        PROPOSAL_STATUS_WITHDRAWN = 4 [(gogoproto.enumvalue_customname) = "Withdrawn"];
    }
    // Status represents the high level position in the life cycle of the proposal. Initial value is Submitted.
    Status status = 7;
    enum Result {
        option (gogoproto.goproto_enum_prefix) = false;
        // An empty value is invalid and not allowed
        PROPOSAL_RESULT_INVALID = 0 [(gogoproto.enumvalue_customname) = "ProposalResultInvalid"];
        // Until a final tally has happened the status is undefined
        PROPOSAL_RESULT_UNDEFINED = 1 [(gogoproto.enumvalue_customname) = "ProposalResultUndefined"];
        // Final result of the tally
        PROPOSAL_RESULT_ACCEPTED = 2 [(gogoproto.enumvalue_customname) = "ProposalResultAccepted"];
        // Final result of the tally
        PROPOSAL_RESULT_REJECTED = 3 [(gogoproto.enumvalue_customname) = "ProposalResultRejected"];
    }
    // Result is the final result based on the votes and election rule. Initial value is Undefined.
    // The result is persisted so that clients can always rely on this state and not have to replicate the logic.
    Result result = 8;

    // Tally contains the sums of all weighted votes for this proposal.
    Tally vote_state = 9 [(gogoproto.nullable) = false];

    // Timestamp of the block where the proposal execution times out. Header times of the votes and execution messages
    // must be before this end time to be included in the election. After the timeout timestamp the proposal can not be
    // executed anymore and should be considered pending delete.
    google.protobuf.Timestamp timeout = 10 [(gogoproto.nullable) = false];

    enum ExecutorResult {
        option (gogoproto.goproto_enum_prefix) = false;
        // An empty value is not allowed
        PROPOSAL_EXECUTOR_RESULT_INVALID = 0  [(gogoproto.enumvalue_customname) = "ProposalExecutorResultInvalid"];
        // We have not yet run the executor
        PROPOSAL_EXECUTOR_RESULT_NOT_RUN = 1 [(gogoproto.enumvalue_customname) = "ProposalExecutorResultNotRun"];
        // The executor was successful and proposed action updated state
        PROPOSAL_EXECUTOR_RESULT_SUCCESS = 2 [(gogoproto.enumvalue_customname) = "ProposalExecutorResultSuccess"];
        // The executor returned an error and proposed action didn't update state
        PROPOSAL_EXECUTOR_RESULT_FAILURE = 3 [(gogoproto.enumvalue_customname) = "ProposalExecutorResultFailure"];
    }
    // Result is the final result based on the votes and election rule. Initial value is NotRun.
    ExecutorResult executor_result = 11;
}

message Tally {
    string yes_count = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    string no_count = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    string abstain_count = 3 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    string veto_count = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message Vote {
    uint64 proposal = 1 [(gogoproto.casttype) = "ProposalID"];
    bytes voter = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    Choice choice = 3;
    string comment = 4;
    google.protobuf.Timestamp submitted_at = 5 [(gogoproto.nullable) = false];
}

// Params defines the set of configurable parameters.
message Params {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;
    uint32 max_comment_length = 1 [(gogoproto.moretags) = "yaml:\"max_comment_length\""];
}


message GenesisState {
    option (gogoproto.equal) = true;
    option (gogoproto.goproto_stringer) = false;
    Params Params = 1 [(gogoproto.nullable) = false];
    uint64 GroupSeq = 2;
    bytes Groups = 3 [(gogoproto.casttype) = "encoding/json.RawMessage"];
    bytes GroupMembers = 4 [(gogoproto.casttype) = "encoding/json.RawMessage"];
    uint64 GroupAccountSeq = 5;
    bytes GroupAccounts = 6 [(gogoproto.casttype) = "encoding/json.RawMessage"];
    uint64 ProposalSeq = 7;
    bytes Proposals = 8 [(gogoproto.casttype) = "encoding/json.RawMessage"];
    bytes Votes = 9 [(gogoproto.casttype) = "encoding/json.RawMessage"];
}
